# openai-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/cpr/: CMakeLists.txt  cpr_example.cpp
include/openai/: openai.hpp
include/openai/v1/: chat.hpp  connection.hpp  engine.hpp  message.hpp
src/openai/: CMakeLists.txt
src/openai/v1/: chat.cpp  connection.cpp  engine.cpp
